@startuml domain-event
class DomainEvent {
  + String eventId
  + String version
  + long timestamp
  + String type
  + String identify
  + String source
  + Map<String, Object> extension
  + Object data
}

class DomainEventHandler {
  + boolean accept(DomainEvent event);
  + void handle(DomainEvent event);
}

class DomainEventDispatcher {
 + void register(DomainEventHandler handler)
 + void publish(DomainEvent event)
}

class DomainEventStore {
 + void save(DomainEvent event)
}

DomainEventDispatcher -down-> DomainEventStore: use
DomainEventStore -down-> DomainEvent: save
DomainEventDispatcher -up-* DomainEventHandler: register
DomainEventDispatcher ---> DomainEvent: publish
DomainEventHandler --> DomainEvent: handle

@enduml